<resources>
    <string name="app_name">نانو نت - أدمن</string>
    <string name="login">تسجيل الدخول</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="participate">مشترك</string>
    <string name="provider">وكيل</string>
    <string name="admin">مدير</string>
    <string name="enter_username_password_error">الرجاء ادخال اسم المستخدم وكلمة المرور</string>
    <string name="try_again">حاول مجدداً</string>
    <string name="providers">الوكلاء</string>
    <string name="home">الرئيسية</string>
    <string name="add_provider">إضافة وكيل</string>
    <string name="search">بحث</string>
    <string name="menu">القائمة</string>
    <string name="no_provider_yet">لا يوجد وكلاء</string>
    <string name="name">الاسم</string>
    <string name="email">اﻹيميل</string>
    <string name="save">حفظ</string>
    <string name="enter_username">اسم المستخدم مطلوب</string>
    <string name="enter_name">الاسم مطلوب</string>
    <string name="enter_email">الايميل مطلوب</string>
    <string name="enter_password">كلمة المرور مطلوبة</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="renew">تجديد الاشتراك</string>
    <string name="sure_delete">تأكيد الحذف؟</string>
    <string name="sure_stop">تأكيد التعطيل؟</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="start_date">بداية الاشتراك</string>
    <string name="day">يوم</string>
    <string name="month">شهر</string>
    <string name="year">سنة</string>
    <string name="choose_date">اختر تاريخ</string>
    <string name="stop">تعطيل</string>
    <string name="send_email">أرسل ايميل</string>
    <string name="expired">الاشتراك منتهي</string>
    <string name="remain">باقي لنهاية الاشتراك:</string>
    <string name="all_providers">كل الوكلاء</string>
    <string name="exist">موجود مسبقاً</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="provider_status">حالة الوكلاء</string>
    <string name="order_by">ترتيب حسب</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="by_name">حسب الاسم</string>
    <string name="by_days">حسب عدد اﻷيام</string>
    <string name="sure_logout">تأكيد تسجيل الخروج؟</string>
    <string name="sure_active">تأكيد التفعيل؟</string>
</resources>