<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/widget_margin"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/card">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppHeadText"
                    android:layout_marginBottom="0dp"
                    android:text="@string/login" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppSubHeadText"
                    android:layout_marginTop="0dp"
                    android:text="@string/admin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTIL"
                    style="@style/AppTextInputLayoutBase"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_round_alternate_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTIL"
                    style="@style/AppTextInputLayoutBase"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_round_security">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginBTN"
                    style="@style/AppMainButton"
                    android:text="@string/login" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>